add links to home page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title>Cool Cars</title>
     </head>
     <body>
-
+    <h1></h1>
+    <a href="tatescars.html">Tate Fav Cars!</a>
+     <a href="drewscars.html">Drew's Favorite Cars!</a>
+    <a href="top-10-cars.html">Dylan's favorite cars</a>
     </body>
 </html>
