links in list iteams

--- a/top-10-cars.html
+++ b/top-10-cars.html
@@ -4,7 +4,13 @@
         <title>Top 10 Cars</title>
     </head>
     <body>
-    <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=lamborghini%20veneno">Lamborgini Veneo</a>
-    <a href="http://www.bugatti.com/chiron/">Buggati Chiron</a>
+    <p> The Lamborgini Veneo goes 221mph a top speed. Buggati chiron goes 261mph at top speed. Lamborgini Aventador goes 217mph at top speed.</p>
+    <li><a href="https://www.lamborghini.com/en-en/brand/masterpieces/veneno">Lamborgini Veneo</a></li>
+    <li><a href="http://www.bugatti.com/chiron/">Buggati Chiron</a></li>
+    <li><a href="http://www.autotrader.com/cars-for-sale/Lamborghini/Aventador?LNX=SPGOOGLENONBRANDMAKE&cid=SI_921826017_104501825220_1">Lamborgini Aventador</a></li>
+    <li><a href="http://www.venomgt.com/">Hennesy Venom GT</a></li>
+    <li><a href="https://www.tesla.com/blog/new-tesla-model-s-now-quickest-production-car-world">Tesla S P100D</a></li>
+    <li><a href="https://www.tesla.com/blog/new-tesla-model-s-now-quickest-production-car-world">Tesla S P100D</a></li>
+    <img src="https://i.ytimg.com/vi/v-GBSE_sD4o/maxresdefault.jpg" width="500px" length="500px"></img>  
     </body>
 </html>
