--- a/drewscars.html
+++ b/drewscars.html
@@ -6,6 +6,7 @@
     <body>
         <a href="index.html">Go Home</a>
         <h1>Mind Blowing cars</h1>
+        <a href="speed.html">Speeds!</a>
     <li>Bugatti Veyron</li>
     <li>Lamborghini Veneno</li>
     <li>Lykan Hypersport</li>
