added front side of cars

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>Cool Cars</title>
+        <link rel="stylesheet" href="" type="text/css" />
     </head>
     <body>
     <h1></h1>
-    <a href="tatescars.html">Tate Fav Cars!</a>
-     <a href="drewscars.html">Drew's Favorite Cars!</a>
-    <a href="top-10-cars.html">Dylan's favorite cars</a>
-    </body>
+   <li><a href="tatescars.html">Tate Fav Cars!</a></li>
+     <li><a href="drewscars.html">Drew's Favorite Cars!</a></li>
+   <li><a href="top-10-cars.html">Dylan's favorite cars</a></li>
+   <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 </html>
