--- a/top-10-cars.html
+++ b/top-10-cars.html
@@ -4,6 +4,7 @@
         <title>Top 10 Cars</title>
     </head>
     <body>
+    <a href="price.html">prices</a>
     <p> The Lamborgini Veneo goes 221mph a top speed. Buggati chiron goes 261mph at top speed. Lamborgini Aventador goes 217mph at top speed.</p></li>
     <li><a href="https://www.lamborghini.com/en-en/brand/masterpieces/veneno">Lamborgini Veneo</a>
     <li><a href="http://www.bugatti.com/chiron/">Buggati Chiron</a>
@@ -11,5 +12,7 @@
     <li><a href="http://www.venomgt.com/">Hennesy Venom GT</a>
     <li><a href="https://www.tesla.com/blog/new-tesla-model-s-now-quickest-production-car-world">Tesla S P100D</a>
    <div><img src="https://i.ytimg.com/vi/3vPo1c2f1I8/maxresdefault.jpg" width="500px" length="500px"></img></div>
+    <div><img src="http://assets.bugatti.com/typo3conf/ext/bugatti_specials/Resources/Public/Template/content/chiron/gallery/9.jpg" width="500px" length="500px"></img></div>
+    <div><img src="https://i.ytimg.com/vi/ZzWibLww5m8/maxresdefault.jpg" length="50opx" width="500px"></img></div>
     </body>
 </html>
