--- a/price.html
+++ b/price.html
@@ -4,6 +4,8 @@
         <title> </title>
     </head>
     <body>
+    <li><a href="top-10-cars.html">Dylan's Favorite Cars</a></li>
+    <li><a href="index.html">Home</a></li>
     <h1>prices of these fabulas cars</h1>
     <p>lamborgini veneno $4,000,000</p>
     <p>Bugatti Chiron $2,500,000</p>
