made change to index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,4 @@
    <li><a href="tatescars.html">Tate Fav Cars!</a></li>
      <li><a href="drewscars.html">Drew's Favorite Cars!</a></li>
    <li><a href="top-10-cars.html">Dylan's favorite cars</a></li>
-   <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
-</html>
+<script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script></html>
