--- a/top-10-cars.html
+++ b/top-10-cars.html
@@ -2,21 +2,30 @@
 <html>
     <head>
         <title>Top 10 Cars</title>
+    <style>
+    .img {
+    width: 80%;
+    height: 180px;
+    color:blue;
+    }  
+    .car {
+    color:red;
+    }    
+    </style>
     </head>
     <body>
-    <li><a href="price.html">prices</a></li>
-    <li><a href="index.html">Home</a></li>
-    <p> The Lamborgini Veneo goes 221mph a top speed. Buggati chiron goes 261mph at top speed. Lamborgini Aventador goes 217mph at top speed.</p></li>
-    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=lamborghini+veneno">Lamborgini Veneo</a>
-    <li><a href="https://www.google.com/search?sclient=psy-ab&espv=2&biw=1279&bih=612&site=webhp&q=bugatti+chiron&oq=bu&gs_l=hp.9..0i67k1l4.80256.88901.0.92062.19.18.0.0.0.0.261.3134.0j9j7.16.0....0...1c.1.64.psy-ab..13.6.1159...0.oRmTUfzPAHo&pbx=1&btnI=1">Buggati Chiron</a>
-    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=lamborghini%20aventador">Lamborgini Aventador</a>
-    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=hennessey%20venom%20gt">Hennesy Venom GT</a>
-    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=tesla%20s%20p100d">Tesla S P100D</a>
-   <div><img src="https://i.ytimg.com/vi/3vPo1c2f1I8/maxresdefault.jpg" width="500px" length="500px"></img></div>
+    <li><a href="speeds.html"><span class="car">Speeds</span></a></li>
+    <li><a href="price.html"><span class="car">prices</span></a></li>
+    <li><a href="index.html"><span class="car">Home</a></li>
+    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=lamborghini+veneno"><span class="car">Lamborgini Veneo</span></a>
+    <li><a href="https://www.google.com/search?sclient=psy-ab&espv=2&biw=1279&bih=612&site=webhp&q=bugatti+chiron&oq=bu&gs_l=hp.9..0i67k1l4.80256.88901.0.92062.19.18.0.0.0.0.261.3134.0j9j7.16.0....0...1c.1.64.psy-ab..13.6.1159...0.oRmTUfzPAHo&pbx=1&btnI=1"><span class="car">Buggati Chiron</span</a>
+    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=lamborghini%20aventador"><span class="car">Lamborgini Aventador</span></a>
+    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=hennessey%20venom%20gt"><span class="car">Hennesy Venom GT</span></a>
+    <li><a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=tesla%20s%20p100d"><span class="car">Tesla S P100D</span></a>
+    <div><img src="https://i.ytimg.com/vi/3vPo1c2f1I8/maxresdefault.jpg" width="500px" length="500px"></img></div>
     <div><img src="http://assets.bugatti.com/typo3conf/ext/bugatti_specials/Resources/Public/Template/content/chiron/gallery/9.jpg" width="500px" length="500px"></img></div>
     <div><img src="https://i.ytimg.com/vi/ZzWibLww5m8/maxresdefault.jpg" length="500px" width="500px"></img></div>
-    <div></div><img src="https://i.ytimg.com/vi/gWAavCjVQvM/maxresdefault.jpg" length="500px" width="500px"><img></div>    
+    <div><img src="https://i.ytimg.com/vi/gWAavCjVQvM/maxresdefault.jpg" length="500px" width="500px"><img></div>    
     <div><img src="http://i0.wp.com/cdn.bgr.com/2015/12/2015-tesla-model-s-p85d.jpg?w=625&quality=98&strip=all" length="500px" width="500px"></img></div>
-    
     </body>
 </html>
