Put css on price.html

--- a/price.html
+++ b/price.html
@@ -2,15 +2,23 @@
 <html>
     <head>
         <title> </title>
+    <style>
+    .coolcars {
+        color:red;
+    }
+    .cars {
+    color:blue;
+    }
+    </style>
     </head>
     <body>
-    <li><a href="top-10-cars.html">Dylan's Favorite Cars</a></li>
-    <li><a href="index.html">Home</a></li>
-    <h1>prices of these fabulas cars</h1>
-    <p>lamborgini veneno $4,000,000</p>
-    <p>Bugatti Chiron $2,500,000</p>
-    <p>Lamborgini Aventador $3,999,500</p>
-    <p>Hennesy Venom gt $1,200,000</p>
-    <p>Tesla S P100D $135,500</p>
+    <li class="coolcars"><a href="top-10-cars.html"><span class="coolcars">Dylan's Favorite Cars</span></a></li>
+    <li class="cars"><a href="index.html"><span class="cars">Home</span></a></li>
+    <h1 class="coolcars">prices of these fabulas cars</h1>
+    <p class="cars">lamborgini veneno $4,000,000</p>
+    <p class="coolcars">Bugatti Chiron $2,500,000</p>
+    <p class="cars">Lamborgini Aventador $3,999,500</p>
+    <p class="coolcars">Hennesy Venom gt $1,200,000</p>
+    <p class="cars">Tesla S P100D $135,500</p>
     </body>
 </html>
