--- a/speeds.html
+++ b/speeds.html
@@ -3,6 +3,12 @@
     <head>
         <title> </title>
     <style>
+    .so-cool-cars {
+        color:red;
+    }
+    .awesome-cars {
+        color:blue;
+    }
     #ride {
     position: absolute;
     top: 10px;
@@ -15,13 +21,13 @@
     </style>
     </head>
     <body>
-    <li><a href="index.html">Home</a></li>
-   <li><a href="top-10-cars.html">Dylan's favorite cars</a></li>
-    <li>lamborghini veneno <strong>221mph</strong></li>
-    <li>Buggati Chiron<strong>288mph</strong></li>
-    <li>lamborghini Aventador<strong>217mph</strong></li>
-    <li>Hennesy Venom gt<strong>270mph</strong></li>
-    <li>tesla p100d<strong>155mph</strong></li>
+    <li class="so-cool-cars"><a href="index.html"><span class="so-cool-cars">Home</span></a></li>
+   <li class="awesome-cars"><a href="top-10-cars.html"><span class="awesome-cars">Dylan's favorite cars</span></a></li>
+    <li class="so-cool-cars">lamborghini veneno <strong>221mph</strong></li>
+    <li class="awesome-cars">Buggati Chiron<strong>288mph</strong></li>
+    <li class="so-cool-cars">lamborghini Aventador<strong>217mph</strong></li>
+    <li class="awesome-cars">Hennesy Venom gt<strong>270mph</strong></li>
+    <li class="so-cool-cars">tesla p100d<strong>155mph</strong></li>
     <img src="https://s-media-cache-ak0.pinimg.com/originals/78/4f/5d/784f5d09cba6e3cf6bdc56187d5f6e8e.jpg" width="300" length="300" id="ride"></img>
     </body>
 </html>
