made paraghraphs under image

--- a/top-10-cars.html
+++ b/top-10-cars.html
@@ -28,8 +28,12 @@
     <div><img src="https://i.ytimg.com/vi/3vPo1c2f1I8/maxresdefault.jpg" width="500px" length="500px"></img></div>
     <div><p>0-60 in 2.8 seconds</p></div>
     <div><img src="http://assets.bugatti.com/typo3conf/ext/bugatti_specials/Resources/Public/Template/content/chiron/gallery/9.jpg" width="500px" length="500px"></img></div>
+    0-60 in 15 seconds
     <div><img src="https://i.ytimg.com/vi/ZzWibLww5m8/maxresdefault.jpg" length="500px" width="500px"></img></div>
+    0-60 in 2.7 seconds
     <div><img src="https://i.ytimg.com/vi/gWAavCjVQvM/maxresdefault.jpg" length="500px" width="500px"><img></div>    
+    0-60 in 2.5 seconds
     <div><img src="http://i0.wp.com/cdn.bgr.com/2015/12/2015-tesla-model-s-p85d.jpg?w=625&quality=98&strip=all" length="500px" width="500px"></img></div>
+    0-60 in 2.5 seconds
     </body>
 </html>
